# py-email-invitation-to-contribute

./: .gitignore  cloudbuild.yaml  main.py  pyproject.toml  test_main.py
templates/: invitation_to_contribute_fr.rst  invitation_to_contribute_title_fr.txt
